
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int exploit_addchar(unsigned char *ww, unsigned char wc)
{
 unsigned char * wwo = ww;

 switch (wc) {
 case ('\\'):
  *ww++ = '\\';
  *ww++ = '\\';
  break;
 case (0xff):
 case ('\n'):
 case (' '):
 case ('\t'):
  *ww++ = '\\';
  *ww++ = ((wc & 0300) >> 6) + '0';
  *ww++ = ((wc & 0070) >> 3) + '0';
  *ww++ = (wc & 0007) + '0';
  break;
 default:
  *ww++ = wc;
  break;
 }

 return (ww - wwo);
}
